--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,16 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+        </dependency>
+
+
+    </dependencies>
+
 </project>
